<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.appportfolio.MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:text="@string/activity_name"
        android:layout_width="@dimen/activity_body_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/colorPrimary"
        android:fontFamily="sans-serif" />

    <Button
        android:id="@+id/button"
        android:text="@string/activity_button1_name"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/textView2"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        style="@style/PortfolioButton" />

    <Button
        android:text="@string/activity_button2_name"
        android:id="@+id/button2"
        android:layout_marginTop="@dimen/activity_button_margin_top"
        android:layout_below="@+id/button"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        style="@style/PortfolioButton" />

    <Button
        android:text="@string/activity_button3_name"
        android:id="@+id/button3"
        style="@style/PortfolioButton"
        android:layout_marginTop="@dimen/activity_button_margin_top"
        android:layout_below="@+id/button2"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2" />

    <Button
        android:text="@string/activity_button4_name"
        android:id="@+id/button4"
        android:layout_marginTop="@dimen/activity_button_margin_top"
        android:layout_below="@+id/button3"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignStart="@+id/button3"
        style="@style/PortfolioButton" />

    <Button
        android:text="@string/activity_button5_name"
        android:id="@+id/button5"
        android:layout_marginTop="@dimen/activity_button_margin_top"
        android:layout_below="@+id/button4"
        android:layout_alignLeft="@+id/button4"
        android:layout_alignStart="@+id/button4"
        style="@style/PortfolioButton" />

    <Button
        android:text="@string/activity_button6_name"
        android:id="@+id/button6"
        android:layout_marginTop="@dimen/activity_button_margin_top"
        android:layout_below="@+id/button5"
        android:layout_alignLeft="@+id/button5"
        android:layout_alignStart="@+id/button5"
        android:background="@color/colorButtonPrimary"
        style="@style/PortfolioButton" />

</RelativeLayout>
